--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset='utf-8'>
   </head>
   <body>
-  <a href="fulcrumapp://new-record%3Fform_id%3D7628635e-cc16-4d24-8067-b623fe3714da%26text_2%3Dkendrick%26yesno_2%3Dno%26single_choice_2%3Dsocks+yellow%26barcode_1%3Dscan+me%26classification_1%3DABB%2C800xA+Controller%26date_1%3D2014-07-20%26time_1%3D07%3A20%26hyperlink_1%3Dhttp%3A%2F%2Fwww.espn.com">TEST VALID NEW RECORD WITH SOME DATA</a>
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan +me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID NEW RECORD WITH SOME DATA</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://edit-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&record_id=ff8eb52d-270c-435c-ae72-f4d460eb122d&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID EDIT RECORD WITH SOME DATA</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://new-record?form_id=BAD-FORM-ID&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST INVALID FORM ID ON NEW RECORD</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://edit-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&record_id=BAD-RECORD-ID&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST INVALID RECORD ID ON EDIT RECORD</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://edit-record?form_id=BAD-FORM-ID&record_id=ff8eb52d-270c-435c-ae72-f4d460eb122d&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST INVALID FORM ID ON EDIT RECORD</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_1=kendrick&yesno_1=no&single_choice_1=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST SETTING VALUES OF FIELDS WITH DEFAULT VALUES</h3></a>
+    <br />
+    <br />
+    <a href=""><h3>TEST PROVIDING INVALID DATA FOR ALL FIELDS</h3></a>
   </body>
 </html>
