--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan +me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID NEW RECORD WITH SOME DATA</h3></a>
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID NEW RECORD WITH SOME DATA</h3></a>
     <br />
     <br />
     <a href="fulcrumapp://edit-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&record_id=ff8eb52d-270c-435c-ae72-f4d460eb122d&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID EDIT RECORD WITH SOME DATA</h3></a>
@@ -23,6 +23,12 @@
     <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_1=kendrick&yesno_1=no&single_choice_1=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST SETTING VALUES OF FIELDS WITH DEFAULT VALUES</h3></a>
     <br />
     <br />
-    <a href=""><h3>TEST PROVIDING INVALID DATA FOR ALL FIELDS</h3></a>
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_2=INVALID+FORM+DATA&yesno_2=HELLO&single_choice_2=NOT+A+REAL+OPTION&barcode_1=THIS+IS+HARD+TO+MESS+UP&classification_1=NOT+A+VALID+OPTION&date_1=NOT+A+VALID+DATE&time_1=NOT+A+VALID+TIME&hyperlink_1=NOT+A+URL"><h3>TEST PROVIDING INVALID DATA FOR ALL FIELDS</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&project_id=4fb6bfbf144140674e000014&status=is+josh&latitude=38&longitude=98.5&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST LAT/LONG PROJECT AND STATUS</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&project_id=NOT+VALID&status=BLAHBLAH&latitude=95&longitude=201.50&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST INVALID LAT/LONG PROJECT AND STATUS</h3></a>
   </body>
 </html>
