add fulcrumapp base urls for testing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <!-- A bunch of links to test Fulcrum URL Actions -->
+    <a href="fulcrumapp://"><h3>just fulcrumapp://</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://android-settings"><h3>fulcrumapp://android-settings</h3></a>
+    <br />
+    <br />
     <a href="fulcrumapp://new-record?form_id=7628635e-cc16-4d24-8067-b623fe3714da&text_2=kendrick&yesno_2=no&single_choice_2=socks+yellow&barcode_1=scan+me&classification_1=ABB%2C800xA+Controller&date_1=2014-07-20&time_1=07%3A20&hyperlink_1=http%3A%2F%2Fwww.espn.com"><h3>TEST VALID NEW RECORD WITH SOME DATA</h3></a>
     <br />
     <br />
