--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <a href="fulcrumapp://"><h3>just fulcrumapp://</h3></a>
     <br />
     <br />
+    <a href="fulcrumapp://records"><h3>fulcrumapp://records</h3></a>
+    <br />
+    <br />
     <a href="fulcrumapp://android-settings"><h3>fulcrumapp://android-settings</h3></a>
     <br />
     <br />
