adjusting some test links

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <a href="fulcrumapp://records"><h3>fulcrumapp://records</h3></a>
     <br />
     <br />
-    <a href="fulcrumapp://android-settings"><h3>fulcrumapp://android-settings</h3></a>
-    <br />
-    <br />
     <a href="fulcrumapp://open"><h3>fulcrumapp://open</h3></a>
     <br />
     <br />
     <a href="fulcrumapp://open?form_id=7628635e-cc16-4d24-8067-b623fe3714da"><h3>fulcrumapp://open with form_id</h3></a>
+    <br />
+    <br />
+    <a href="fulcrumapp://android-settings"><h3>fulcrumapp://android-settings (wont actually open settings)</h3></a>
     <br />
     <br />
     <a href="android-settings.fulcrumapp://"><h3>android-settings.fulcrumapp://</h3></a>
